syntax = "proto3";
package cores;

option go_package = "github.com/snple/kokomi/pb/cores;cores";

import "generic_message.proto";

message Jumper {
    string id = 1;
    string name = 2;
    string desc = 3;
    string tags = 4;
    string type = 5;
    string src = 6;
    string dst = 7;
    string config = 8;
    sint32 status = 9;
    int64 created = 10;
    int64 updated = 11;
    int64 deleted = 12;
}

message ListJumperRequest {
    pb.Page page = 1;
    string src = 2;
    string dst = 3;
    string tags = 4;
    string type = 5;
}

message ListJumperResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated Jumper jumper = 3;
}

service JumperService {
    rpc Create(Jumper) returns (Jumper) {}
    rpc Update(Jumper) returns (Jumper) {}
    rpc View(pb.Id) returns (Jumper) {}
    rpc ViewByName(pb.Name) returns (Jumper) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListJumperRequest) returns (ListJumperResponse) {}
}
